fixed project card responsive alignment

--- a/client/src/components/Projects/style.css
+++ b/client/src/components/Projects/style.css
@@ -16,7 +16,7 @@
   color: #ffffff;
   width: 100% auto;
   height: 100% auto;
-  margin-left: 15%;
+  margin-left: 15% auto;
   margin-right: 10px;
   margin-bottom: 2em;
 
